objects/tffa__DepositSwitch__c.object
<CustomObject>
    <description>Track deposit switch transactions triggered by the customer</description>
    <fields>
        <fullName>tffa__AllocatedAmount__c</fullName>
        <description>The dollar amount of direct deposit allocated to the target account.</description>
        <label>Allocated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__AllocatedPercentage__c</fullName>
        <description>The percentage of direct deposit allocated to the target account.</description>
        <label>Allocated percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tffa__Application__c</fullName>
        <description>Reference to parent application</description>
        <label>Application</label>
        <referenceTo>tffa__Application__c</referenceTo>
        <relationshipLabel>Deposit Switches</relationshipLabel>
        <relationshipName>DepositSwitches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__CompletedOn__c</fullName>
        <description>Date and time on which switch was completed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Completed on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>A summary of the preference or service offered.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__EmployerName__c</fullName>
        <description>The name of the employer selected by the user.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__FinancialInstitution__c</fullName>
        <description>Name of the financial institution in which an account is held. e.g. Account details captured for Balance Transfer.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__HasMultipleAllocations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, user’s direct deposit goes to multiple banks.</description>
        <label>Has Multiple Allocations?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsAllocatedRemainder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, the target account is allocated the remainder of direct deposit after all other allocations have been deducted When false,user’s direct deposit is allocated as a percent or amount.</description>
        <label>Is Remainder Allocated ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Method__c</fullName>
        <description>Method of the deposit switch.</description>
        <label>Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DepositSwitchMethod</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__ProviderAccountId__c</fullName>
        <description>The ID of the bank account the direct deposit was switched to.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ProviderEmployerId__c</fullName>
        <description>The ID of the employer selected by the user.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Employer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ProviderFinancialInstitutionId__c</fullName>
        <description>Provider ID of the financial institution which was selected for switch.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Financial institution ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ProviderItemId__c</fullName>
        <description>The Provider ID of the Item the direct deposit was switched to.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Item ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Provider__c</fullName>
        <description>The provider for deposit switch</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SessionId__c</fullName>
        <description>Link Session ID  by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Session ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Status__c</fullName>
        <description>Current status (of processing) of the deposit switch.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DepositSwitchStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SubmittedOn__c</fullName>
        <description>Date and time on which deposit switch was submitted.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Submitted on</label>
        <type>DateTime</type>
    </fields>
    <label>Deposit Switch</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deposit Switches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>